<resources>
    <string name="app_name">TRANSPARÊNCIA EM MÃOS BRASIL</string>
    <string name="gastos_bolsa_fam_lia">Parcelas Bolsa Família</string>
    <string name="munic_pio">Município *</string>
    <string name="informe_cep">Informe seu CEP</string>
    <string name="data">Data *</string>
    <string name="datetime">Ex.201905</string>
    <string name="consultar">CONSULTAR</string>
    <string name="valor">Valor gasto:</string>
    <string name="total_beneficiados">Total beneficiados:</string>
    <string name="dados_obtidos_no_portal_da_transpar_ncia_do_governo_federal">* Dados obtidos no Portal da Transparência do Governo Federal</string>
    <string name="consultar_emendas_parlamentares">Consultar Emendas Parlamentares</string>
    <string name="ano">ANO *</string>
    <string name="informe_o_ano_da_emenda">Informe o ano da emenda</string>
    <string name="nome_do_autor">Nome do autor</string>
    <string name="infome_o_autor_da_ementa">Infome o autor da emenda</string>
    <string name="n_mero_da_ementa">Número da ementa</string>
    <string name="informe_o_n_mero_da_ementa">Informe o número da emenda</string>
    <string name="ano_label">Ano:</string>
    <string name="valor_liquidado">Valor Liquidado:</string>
    <string name="valor_empenhado">Valor Empenhado:</string>
    <string name="valor_pago">Valor Pago:</string>
    <string name="localidade_do_gasto">Localidade do gasto:</string>
    <string name="fun_o">Função:</string>
    <string name="subfun_o">Subfunção:</string>
</resources>