<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:cardBackgroundColor="#FDD835"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="8dp"
        android:background="@color/colorPrimary"
        app:cardBackgroundColor="#FDD835"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="168dp">

            <TextView
                android:id="@+id/label_ano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/ano_label"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_ano"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/label_ano"
                app:layout_constraintTop_toBottomOf="@+id/label_ano"
                tools:text="2020" />

            <TextView
                android:id="@+id/label_valor_liquidado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/valor_liquidado"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/label_ano"
                app:layout_constraintTop_toBottomOf="@+id/tv_ano" />

            <TextView
                android:id="@+id/tv_valor_liquidado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/label_ano"
                app:layout_constraintTop_toBottomOf="@+id/label_valor_liquidado"
                tools:text="123.123.134,00" />

            <TextView
                android:id="@+id/label_valor_empenhado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/valor_empenhado"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/label_ano"
                app:layout_constraintTop_toBottomOf="@+id/tv_valor_liquidado" />

            <TextView
                android:id="@+id/tv_valor_empenhado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/label_ano"
                app:layout_constraintTop_toBottomOf="@+id/label_valor_empenhado"
                tools:text="123.123.134,00" />

            <TextView
                android:id="@+id/label_valor_pago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="128dp"
                android:layout_marginTop="8dp"
                android:text="@string/valor_pago"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/label_ano"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_valor_pago"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/primary_text_light"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@+id/label_valor_pago"
                app:layout_constraintTop_toBottomOf="@+id/label_valor_pago"
                tools:text="123.123.123,00" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>